<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.idekreasi.forecast.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@color/orangePrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lokasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:text="@string/lokasi"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/white_balance_sunny" />

            <TextView
                android:id="@+id/now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imgLogo"
                android:layout_centerVertical="true"
                android:text="@string/suhu"
                android:textColor="@android:color/white"
                android:textSize="48dp" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_toRightOf="@id/now"
                android:layout_marginLeft="-20dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/temperature_celsius"
                android:tint="#FFF" />

            <TextView
                android:id="@+id/deskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imgLogo"
                android:layout_alignBottom="@id/imgLogo"
                android:layout_marginBottom="10dp"
                android:text="@string/tgl"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <FrameLayout
                    android:id="@+id/lingkaranBesar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-16dp"
                    android:layout_marginRight="-16dp"
                    android:layout_below="@+id/lingkaranKecil1">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/circle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="1024"
                        android:textColor="#FFF"
                        android:textSize="15dp" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/lingkaranKecil1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_toRightOf="@+id/lingkaranBesar1"
                    android:src="@drawable/circle"
                    android:tint="#FFF">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/circle"
                        android:tint="#FFF" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center"
                        android:src="@drawable/oil_temperature"
                        android:tint="#FF9800" />
                </FrameLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <FrameLayout
                    android:id="@+id/lingkaranBesar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-16dp"
                    android:layout_below="@+id/lingkaranKecil2">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/circle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="1024"
                        android:textColor="#FFF"
                        android:textSize="15dp" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/lingkaranKecil2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="-16dp"
                    android:layout_toRightOf="@+id/lingkaranBesar2"
                    android:src="@drawable/circle"
                    android:tint="#FFF">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/circle"
                        android:tint="#FFF" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center"
                        android:src="@drawable/oil_temperature"
                        android:tint="#FF9800" />
                </FrameLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <FrameLayout
                    android:id="@+id/lingkaranBesar3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-16dp"
                    android:layout_below="@+id/lingkaranKecil3">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/circle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="1024"
                        android:textColor="#FFF"
                        android:textSize="15dp" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/lingkaranKecil3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="-16dp"
                    android:layout_toRightOf="@+id/lingkaranBesar3"
                    android:src="@drawable/circle"
                    android:tint="#FFF">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/circle"
                        android:tint="#FFF" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center"
                        android:src="@drawable/oil_temperature"
                        android:tint="#FF9800" />
                </FrameLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <FrameLayout
                    android:id="@+id/lingkaranBesar4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-16dp"
                    android:layout_below="@+id/lingkaranKecil4">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/circle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="1024"
                        android:textColor="#FFF"
                        android:textSize="15dp" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/lingkaranKecil4"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="-16dp"
                    android:layout_toRightOf="@+id/lingkaranBesar4"
                    android:src="@drawable/circle"
                    android:tint="#FFF">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/circle"
                        android:tint="#FFF" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center"
                        android:src="@drawable/oil_temperature"
                        android:tint="#FF9800" />
                </FrameLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- CUACA HARI SELANJUTNYA -->

    <ListView
        android:id="@+id/nextDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame"
        android:padding="10dp">


    </ListView>

</LinearLayout>
